force-app/main/default/objects/geopointe__GP_Route_Plan_User__c/geopointe__GP_Route_Plan_User__c.object-meta.xml
<CustomObject>
    <label>Geopointe Route Plan User</label>
    <nameField>
        <displayFormat>RPU-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Route Plan Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>