force-app/main/default/objects/geopointe__GP_Route_Plan_User__c/fields/geopointe__Route_Plan_Configuration__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Plan_Configuration__c</fullName>
    <label>Route Plan Configuration</label>
    <referenceTo>geopointe__GP_Route_Plan_Configuration__c</referenceTo>
    <relationshipLabel>Route Plan Users</relationshipLabel>
    <relationshipName>Route_Plan_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>